[gd_scene load_steps=11 format=2]

[ext_resource path="res://objects/level_door/level_door.gd" type="Script" id=1]
[ext_resource path="res://sprites/objects.png" type="Texture" id=2]
[ext_resource path="res://tiles/tileset1.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=4]

[sub_resource type="Animation" id=7]

resource_name = "get"
length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sparkle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77, 78, 79 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gem:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 81, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 6, 16 )

[sub_resource type="Animation" id=4]

length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cloud:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 16, 17, 18, 19, 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("locked_door:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_unlock"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sparkle:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="DynamicFontData" id=5]

font_path = "res://misc_assets/PressStart2P.ttf"

[sub_resource type="DynamicFont" id=6]

size = 16
use_mipmaps = false
use_filter = false
font_data = SubResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="level_door" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 32
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
door_name = ""
dest_scene = ""
dest_spawn = ""
total_crystals = 30
state = null

[node name="anim" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/get = SubResource( 7 )
anims/rotate = SubResource( 8 )
blend_times = [  ]

[node name="gem" type="Sprite" parent="." index="1"]

position = Vector2( 0, -160 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 87
_sections_unfolded = [ "Animation", "Transform" ]

[node name="sparkle" type="Sprite" parent="." index="2"]

modulate = Color( 1, 1, 1, 0.84498 )
position = Vector2( 0, -154 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 16
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="unlocked_door" type="Sprite" parent="." index="3"]

scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 0, 128, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility", "Z Index" ]

[node name="locked_door" type="Sprite" parent="." index="4"]

scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, -16 )
region_enabled = true
region_rect = Rect2( 32, 128, 32, 32 )
_sections_unfolded = [ "Offset", "Region", "Transform", "Visibility" ]

[node name="cloud" type="Sprite" parent="." index="5"]

position = Vector2( 0, -40 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
vframes = 16
hframes = 16
frame = 24
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="6"]

position = Vector2( 0, -48 )
scale = Vector2( 3, 3 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="poof" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/unlock = SubResource( 4 )
blend_times = [  ]

[node name="label" type="Label" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -120.0
margin_right = 100.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
text = "What's Up?"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 1
_sections_unfolded = [ "Rect", "Visibility", "custom_fonts" ]

[connection signal="body_entered" from="." to="." method="_on_level_door_body_entered"]

[connection signal="body_exited" from="." to="." method="_on_level_door_body_exited"]


